first js successful

--- a/src/app/editar-playgrounds/editar-playgrounds.component.html
+++ b/src/app/editar-playgrounds/editar-playgrounds.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div id="editForm" class="container">
 	<div class="col-md-12">
 		<form>
 			<h2>Edit Playground Information</h2>
