--- a/src/app/playground/playground.component.html
+++ b/src/app/playground/playground.component.html
@@ -3,7 +3,7 @@
 		<div class="col-md-12">
 			<h1 class="table-top">{{home}}</h1>
 			<button class="btn btn-success table-top-button"
-				(click)="showAddProductForm()">
+				(click)="showAddPlaygroundForm()">
 				<i class="fa fa-plus"></i>
 			</button>
 		</div>
@@ -33,8 +33,7 @@
 					<td>product.state</td>
 					<td>product.country</td>
 					<td>
-						<button class="btn btn-info" routerLink="editar-playground" 
-						(click)="itWork();">
+						<button class="btn btn-info" routerLink="editar-playground">
 							<i class="fa fa-edit"></i>
 						</button>
 						<button class="btn btn-danger">
