--- a/src/app/playground/playground.component.html
+++ b/src/app/playground/playground.component.html
@@ -24,50 +24,16 @@
 				</tr>
 			</thead>
 			<tbody>
-				<tr>
-					<td>product.id</td>
-					<td>product.name</td>
-					<td>product.description</td>
-					<td>product.address</td>
-					<td>product.locality</td>
-					<td>product.state</td>
-					<td>product.country</td>
+				<tr *ngFor="let playground of playgrounds">
+					<td>{{playground.id}}</td>
+					<td>{{playground.name}}</td>
+					<td>{{playground.description}}</td>
+					<td>{{playground.address}}</td>
+					<td>{{playground.locality}}</td>
+					<td>{{playground.state}}</td>
+					<td>{{playground.country}}</td>
 					<td>
 						<button class="btn btn-info" routerLink="editar-playground">
-							<i class="fa fa-edit"></i>
-						</button>
-						<button class="btn btn-danger">
-							<i class="fa fa-minus"></i>
-						</button>
-					</td>
-				</tr>
-				<tr>
-					<td>product.id</td>
-					<td>product.name</td>
-					<td>product.description</td>
-					<td>product.address</td>
-					<td>product.locality</td>
-					<td>product.state</td>
-					<td>product.country</td>
-					<td>
-						<button class="btn btn-info">
-							<i class="fa fa-edit"></i>
-						</button>
-						<button class="btn btn-danger">
-							<i class="fa fa-minus"></i>
-						</button>
-					</td>
-				</tr>
-				<tr>
-					<td>product.id</td>
-					<td>product.name</td>
-					<td>product.description</td>
-					<td>product.address</td>
-					<td>product.locality</td>
-					<td>product.state</td>
-					<td>product.country</td>
-					<td>
-						<button class="btn btn-info">
 							<i class="fa fa-edit"></i>
 						</button>
 						<button class="btn btn-danger">
