--- a/src/app/playground/playground.component.html
+++ b/src/app/playground/playground.component.html
@@ -36,7 +36,7 @@
 						<button class="btn btn-info" routerLink="editar-playground">
 							<i class="fa fa-edit"></i>
 						</button>
-						<button class="btn btn-danger">
+						<button class="btn btn-danger" (click)="deletePlayground(playground.id)">
 							<i class="fa fa-minus"></i>
 						</button>
 					</td>
