Edit passing ids

--- a/src/app/editar-playgrounds/editar-playgrounds.component.html
+++ b/src/app/editar-playgrounds/editar-playgrounds.component.html
@@ -5,7 +5,7 @@
 			<table>
 				<tr>
 					<th>ID:</th>
-					<th><input style="border-radius: 7px;" type="text" name="id" /></th>
+					<th><input style="border-radius: 7px;" type="text" name="id" value={{id}}/></th>
 				</tr>
 				<tr>
 					<th>Name:</th>
