--- a/src/app/edit-playgrounds/edit-playgrounds.component.html
+++ b/src/app/edit-playgrounds/edit-playgrounds.component.html
@@ -5,35 +5,31 @@
 			<table>
 				<tr>
 					<th>ID:</th>
-					<th><input style="border-radius: 7px;" type="text" name="id" value={{id}}/></th>
+					<th><input style="border-radius: 7px;" type="text" name="id" value={{playground.id}}/></th>
 				</tr>
 				<tr>
 					<th>Name:</th>
-					<th><input style="border-radius: 7px;" type="text" name="name" /></th>
+					<th><input style="border-radius: 7px;" type="text" name="name" value={{playground.name}} /></th>
 				</tr>
 				<tr>
 					<th>Description:</th>
-					<th><input style="border-radius: 7px;" type="text"
-						name="description" /></th>
+					<th><input style="border-radius: 7px;" type="text" name="description" value={{playground.description}}/></th>
 				</tr>
 				<tr>
 					<th>Address:</th>
-					<th><input style="border-radius: 7px;" type="text"
-						name="address" /></th>
+					<th><input style="border-radius: 7px;" type="text" name="address" value={{playground.address}}/></th>
 				</tr>
 				<tr>
 					<th>Locality:</th>
-					<th><input style="border-radius: 7px;" type="text"
-						name="locality" /></th>
+					<th><input style="border-radius: 7px;" type="text" name="locality" value={{playground.locality}}/></th>
 				</tr>
 				<tr>
 					<th>State:</th>
-					<th><input style="border-radius: 7px;" type="text" name="state" /></th>
+					<th><input style="border-radius: 7px;" type="text" name="state" value={{playground.state}}/></th>
 				</tr>
 				<tr>
 					<th>Country:</th>
-					<th><input style="border-radius: 7px;" type="text"
-						name="country" /></th>
+					<th><input style="border-radius: 7px;" type="text" name="country" value={{playground.country}}/></th>
 				</tr>
 				<br>
 				<tr>
