--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -2,7 +2,7 @@
 	<div class="container-fluid">
 		<ul>
 		  <li><a class="active" href="/">{{home}}</a></li>
-		  <li><a>Equipments</a></li>
+		  <li><a routerLink="/equipment">Equipments</a></li>
 		  <li><a>Checklists</a></li>
 		  <li class="dropdownNav">
 		    <a href="javascript:void(0)" class="dropbtnNav">Others</a>
