--- a/src/app/playground/playground.component.html
+++ b/src/app/playground/playground.component.html
@@ -9,7 +9,7 @@
 		</div>
 	</div>	
 	<div class="row">
-		<div class="col-md-12 table-responsive">	
+		<div class="col-md-12 table-responsive" [hidden]="!visible" (window:resize)="onResize($event)">	
 		<table class="table table-bordered table-striped table-hover">
 			<thead>
 				<tr>
@@ -36,13 +36,34 @@
 						<button class="btn btn-info" [routerLink]="['edit-playground', playground.id]">
 							<i class="fa fa-edit"></i>
 						</button>
-						<button class="btn btn-danger" (click)="deletePlayground(playground.id)">
+						<button class="btn btn-danger" (click)="deletePlayground(playground.name)">
 							<i class="fa fa-minus"></i>
 						</button>
 					</td>
 				</tr>
 			</tbody>
 		</table>
+		</div>
+		<div class="container" [hidden]="visible" (window:resize)="onResize($event)">
+		  <div class="card" *ngFor="let playground of playgrounds">
+		    <div class="card-body">
+			  <div class="pull-right">
+				  <button class="btn btn-info" [routerLink]="['edit-playground', playground.id]">
+					<i class="fa fa-edit"></i>
+				  </button>
+				  <button class="btn btn-danger" (click)="deletePlayground(playground.name)">
+					<i class="fa fa-minus"></i>
+				  </button>
+			  </div>
+			  <br><br>
+		      <h4 class="card-title">{{playground.name}}</h4>		      
+		      <p class="card text-center">{{playground.description}}</p>
+		      <p class="card text-center">{{playground.address}}</p>
+		      <p class="card text-center">{{playground.locality}}</p>
+		      <p class="card text-center">{{playground.state}}</p>
+		      <p class="card text-center">{{playground.country}}</p>
+		    </div>
+		  </div>
 		</div>
 	</div>
 </div>	
