--- a/src/app/playground/playground.component.html
+++ b/src/app/playground/playground.component.html
@@ -3,7 +3,7 @@
 		<div class="col-md-12">
 			<h1 class="table-top">{{home}}</h1>
 			<button class="btn btn-success table-top-button"
-				(click)="showAddPlaygroundForm()">
+				[routerLink]="['add-playground']">
 				<i class="fa fa-plus"></i>
 			</button>
 		</div>
