--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -3,7 +3,7 @@
 		<ul>
 		  <li><a class="active" href="/">{{home}}</a></li>
 		  <li><a routerLink="/equipment">Equipments</a></li>
-		  <li><a>Checklists</a></li>
+		  <li><a routerLink="/check-list">Checklists</a></li>
 		  <li class="dropdownNav">
 		    <a href="javascript:void(0)" class="dropbtnNav">Others</a>
 		    <div class="dropdown-content-nav">
