Vamos pela empresa o meu garoto

--- a/src/app/playground/edit-playgrounds.component.html
+++ b/src/app/playground/edit-playgrounds.component.html
@@ -34,7 +34,7 @@
 				<br>
 				<tr>
 					<button style="margin-right: 10px;" type="button" class="btn btn-primary" (click)="editPlayground();">Submit</button>
-					<button type="button" class="btn btn-warning" (click)="hidePlayground();">Cancel</button>
+					<button type="button" class="btn btn-warning" routerLink="">Cancel</button>
 				</tr>
 				<br>
 			</table>
