--- a/src/app/playground/add-playground.component.html
+++ b/src/app/playground/add-playground.component.html
@@ -33,8 +33,8 @@
 				</tr>
 				<br>
 				<tr>
-					<button style="margin-right: 10px;" type="button" class="btn btn-primary" (click)="addPlayground();" routerLink="">Submit</button>
-					<button type="button" class="btn btn-warning" (click)="hidePlayground();">Cancel</button>
+					<button style="margin-right: 10px;" type="button" class="btn btn-primary" (click)="addPlayground();">Submit</button>
+					<button type="button" class="btn btn-warning" routerLink="">Cancel</button>
 				</tr>
 				<br>
 			</table>
