--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -7,7 +7,7 @@
 		  <li class="dropdownNav">
 		    <a href="javascript:void(0)" class="dropbtnNav">Others</a>
 		    <div class="dropdown-content-nav">
-		      <a href="#">Link 1</a>
+		      <a routerLink="/login">Login</a>
 		      <a href="#">Link 2</a>
 		      <a href="#">Link 3</a>
 		    </div>
@@ -15,3 +15,4 @@
 		</ul> 
 	</div>
 </nav>
+<br><br><br><br>
