Modal and equipments working

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -13,7 +13,7 @@
             <div class="checkbox">
                 <label><input type="checkbox" name="remember"> Remember me</label>
             </div>
-            <button type="button" (click)="login(client)" class="btn btn-default" [routerLink]="['playgrounds']">Login</button>
+            <button type="button" (click)="login(client)" class="btn btn-default">Login</button>
         </form>
     </div>
 </section>
