--- a/src/app/equipment/equipment.component.html
+++ b/src/app/equipment/equipment.component.html
@@ -3,7 +3,7 @@
 		<div class="col-md-12">
 			<h1 class="table-top">Equipments</h1>
 			<button class="btn btn-success table-top-button"
-				(click)="showAddEquipmentForm()">
+				[routerLink]="['add-equipment']">				
 				<i class="fa fa-plus"></i>
 			</button>
 		</div>
