--- a/src/app/equipment/edit-equipments.component.html
+++ b/src/app/equipment/edit-equipments.component.html
@@ -20,8 +20,10 @@
 					<th><input style="border-radius: 7px;" type="text" name="selfManufactured" value={{equipment.selfManufactured}}/></th>
 				</tr>		
 				<tr>
+
 					<button style="margin-right: 10px;" type="button" class="btn btn-primary" (click)="editEquipment();">Submit</button>
-					<button type="button" class="btn btn-warning" (click)="hideEquipment();">Cancel</button>
+					<button type="button" class="btn btn-warning" routerLink="/equipment">Cancel</button>
+				
 				</tr>
 				<br>
 			</table>
