--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default back-fluid">
 	<div class="container-fluid">
 		<ul>
-		  <li><a class="active" href="/">{{home}}</a></li>
+		  <li><a routerLink="/playgrounds">Playgrounds</a></li>
 		  <li><a routerLink="/equipment">Equipments</a></li>
 		  <li><a routerLink="/check-list">Checklists</a></li>
 		  <li class="dropdownNav">
