Equipments console errors

--- a/src/app/equipment/add-equipment.component.html
+++ b/src/app/equipment/add-equipment.component.html
@@ -5,19 +5,19 @@
 			<table>
 				<tr>
 					<th>ID:</th>
-					<th><input style="border-radius: 7px;" type="text" name="id" value={{equipment.id}}/></th>
+					<th><input style="border-radius: 7px;" type="text" name="id" value=""/></th>
 				</tr>
 				<tr>
 					<th>Name:</th>
-					<th><input style="border-radius: 7px;" type="text" name="code" value={{equipment.code}} /></th>
+					<th><input style="border-radius: 7px;" type="text" name="code" value="" /></th>
 				</tr>
 				<tr>
 					<th>Description:</th>
-					<th><input style="border-radius: 7px;" type="text" name="description" value={{equipment.description}}/></th>
+					<th><input style="border-radius: 7px;" type="text" name="description" value=""/></th>
 				</tr>
 				<tr>
 					<th>Address:</th>
-					<th><input style="border-radius: 7px;" type="text" name="selfManufactured" value={{equipment.selfManufactured}}/></th>
+					<th><input style="border-radius: 7px;" type="text" name="selfManufactured" value=""/></th>
                 </tr>
         		<tr>
 					<button style="margin-right: 10px;" type="button" class="btn btn-primary" (click)="addEquipment();">Submit</button> 
