--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-nav-bar></app-nav-bar>
-<br><br><br><br>
-<app-playground></app-playground>
 <router-outlet></router-outlet>
+<app-loading></app-loading>
+<app-modal></app-modal>
