--- a/src/app/playground/edit-playgrounds.component.html
+++ b/src/app/playground/edit-playgrounds.component.html
@@ -5,7 +5,7 @@
 			<table>
 				<tr>
 					<th>ID:</th>
-					<th><input style="border-radius: 7px;" type="text" name="id" value={{playground.id}}/></th>
+					<th><input style="border-radius: 7px;" type="text" name="id" value={{playground.id}} disabled/></th>
 				</tr>
 				<tr>
 					<th>Name:</th>
@@ -34,7 +34,7 @@
 				<br>
 				<tr>
 					<button style="margin-right: 10px;" type="button" class="btn btn-primary" (click)="editPlayground();">Submit</button>
-					<button type="button" class="btn btn-warning" (click)="hidePlayground();">Cancel</button>
+					<button type="button" class="btn btn-warning" routerLink="/playgrounds">Cancel</button>
 				</tr>
 				<br>
 			</table>
