--- a/src/app/equipment/edit-equipments.component.html
+++ b/src/app/equipment/edit-equipments.component.html
@@ -23,7 +23,7 @@
 				<tr>
 
 					<button style="margin-right: 10px;" type="button" class="btn btn-primary" (click)="editEquipment();">Submit</button>
-					<button type="button" class="btn btn-warning" routerLink="/equipment">Cancel</button>
+					<button type="button" class="btn btn-warning" (click)="goBack();">Cancel</button>
 				
 				</tr>
 				<br>
@@ -31,4 +31,4 @@
 		</form>
 	</div>
 </div>		
-
+	
