--- a/src/app/check-list/check-list.component.html
+++ b/src/app/check-list/check-list.component.html
@@ -1,6 +1,8 @@
 <div class="container">
 	
-	<div class="row">
+	<div class="row" *ngFor="let checkList of checkLists">
+	
+	
 		<div class="col-md-4">
 			<div class="container" id="">
 			  <div class="card">
@@ -14,152 +16,13 @@
 					  </button>
 				  </div>
 				  <br><br>
-			      <h4 class="card-title">Checklist Title</h4>		      
-			      <p class="card text-center">Checklist Description</p>
+			      <h4 class="card-title">{{checkList.id}}</h4>		      
+			      <p class="card text-center">{{checkList.nome}}</p>
 			    </div>
 			  </div>
 			</div>
 			<br><br>
 		</div>
-		<div class="col-md-4">
-			<div class="container" id="">
-			  <div class="card">
-			    <div class="card-body">
-				  <div class="pull-right">
-					  <button class="btn btn-info">
-						<i class="fa fa-edit"></i>
-					  </button>
-					  <button class="btn btn-danger">
-						<i class="fa fa-minus"></i>
-					  </button>
-				  </div>
-				  <br><br>
-			      <h4 class="card-title">Checklist Title</h4>		      
-			      <p class="card text-center">Checklist Description</p>
-			    </div>
-			  </div>
-			</div>
-			<br><br>
-		</div>
-		<div class="col-md-4">
-			<div class="container" id="">
-			  <div class="card">
-			    <div class="card-body">
-				  <div class="pull-right">
-					  <button class="btn btn-info">
-						<i class="fa fa-edit"></i>
-					  </button>
-					  <button class="btn btn-danger">
-						<i class="fa fa-minus"></i>
-					  </button>
-				  </div>
-				  <br><br>
-			      <h4 class="card-title">Checklist Title</h4>		      
-			      <p class="card text-center">Checklist Description</p>
-			    </div>
-			  </div>
-			</div>
-			<br><br>
-		</div>
-		<div class="col-md-4">
-			<div class="container" id="">
-			  <div class="card">
-			    <div class="card-body">
-				  <div class="pull-right">
-					  <button class="btn btn-info">
-						<i class="fa fa-edit"></i>
-					  </button>
-					  <button class="btn btn-danger">
-						<i class="fa fa-minus"></i>
-					  </button>
-				  </div>
-				  <br><br>
-			      <h4 class="card-title">Checklist Title</h4>		      
-			      <p class="card text-center">Checklist Description</p>
-			    </div>
-			  </div>
-			</div>
-			<br><br>
-		</div>
-		<div class="col-md-4">
-			<div class="container" id="">
-			  <div class="card">
-			    <div class="card-body">
-				  <div class="pull-right">
-					  <button class="btn btn-info">
-						<i class="fa fa-edit"></i>
-					  </button>
-					  <button class="btn btn-danger">
-						<i class="fa fa-minus"></i>
-					  </button>
-				  </div>
-				  <br><br>
-			      <h4 class="card-title">Checklist Title</h4>		      
-			      <p class="card text-center">Checklist Description</p>
-			    </div>
-			  </div>
-			</div>
-			<br><br>
-		</div>
-		<div class="col-md-4">
-			<div class="container" id="">
-			  <div class="card">
-			    <div class="card-body">
-				  <div class="pull-right">
-					  <button class="btn btn-info">
-						<i class="fa fa-edit"></i>
-					  </button>
-					  <button class="btn btn-danger">
-						<i class="fa fa-minus"></i>
-					  </button>
-				  </div>
-				  <br><br>
-			      <h4 class="card-title">Checklist Title</h4>		      
-			      <p class="card text-center">Checklist Description</p>
-			    </div>
-			  </div>
-			</div>
-			<br><br>
-		</div>
-		<div class="col-md-4">
-			<div class="container" id="">
-			  <div class="card">
-			    <div class="card-body">
-				  <div class="pull-right">
-					  <button class="btn btn-info">
-						<i class="fa fa-edit"></i>
-					  </button>
-					  <button class="btn btn-danger">
-						<i class="fa fa-minus"></i>
-					  </button>
-				  </div>
-				  <br><br>
-			      <h4 class="card-title">Checklist Title</h4>		      
-			      <p class="card text-center">Checklist Description</p>
-			    </div>
-			  </div>
-			</div>
-			<br><br>
-		</div>
-		<div class="col-md-4">
-			<div class="container" id="">
-			  <div class="card">
-			    <div class="card-body">
-				  <div class="pull-right">
-					  <button class="btn btn-info">
-						<i class="fa fa-edit"></i>
-					  </button>
-					  <button class="btn btn-danger">
-						<i class="fa fa-minus"></i>
-					  </button>
-				  </div>
-				  <br><br>
-			      <h4 class="card-title">Checklist Title</h4>		      
-			      <p class="card text-center">Checklist Description</p>
-			    </div>
-			  </div>
-			</div>
-			<br><br>
-		</div>
+
 	</div>
 </div>	
