--- a/src/app/equipment/edit-equipments.component.html
+++ b/src/app/equipment/edit-equipments.component.html
@@ -18,12 +18,12 @@
 				</tr>
 				<tr>
 					<th>SelfManufactured:</th>
-					<th><input style="border-radius: 7px;" type="checkbox" name="selfManufactured" /></th>
+					<th><input style="border-radius: 7px;" type="checkbox"  name="selfManufactured" checked=false /></th>
 				</tr>		
 				<tr>
 
 					<button style="margin-right: 10px;" type="button" class="btn btn-primary" (click)="editEquipment();">Submit</button>
-					<button type="button" class="btn btn-warning" (click)="goBack();">Cancel</button>
+					<button type="button" class="btn btn-warning" routerLink="/equipment">Cancel</button>
 				
 				</tr>
 				<br>
@@ -31,4 +31,4 @@
 		</form>
 	</div>
 </div>		
-	
+
