--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -13,7 +13,7 @@
 		    </div>
 		  </li>
 		</ul> 
-		<li><a class="right" routerLink="/login">Log Out</a></li>
+		<li><a class="right pointer" (click)="logOut()">Log Out</a></li>
 	</div>
 </nav>
 <br><br><br><br>
