--- a/src/app/check-list/check-list.component.html
+++ b/src/app/check-list/check-list.component.html
@@ -1,9 +1,6 @@
 <div class="container">
-	
-	<div class="row" *ngFor="let checkList of checkLists">
-	
-	
-		<div class="col-md-4">
+	<div class="row">
+		<div class="col-md-4" *ngFor="let checkList of checkLists">
 			<div class="container" id="">
 			  <div class="card">
 			    <div class="card-body">
@@ -18,6 +15,9 @@
 				  <br>	
 			      <h4 class="card-title">{{checkList.id}}</h4>		      
 			      <p class="card text-center" input id="nome">{{checkList.nome}}</p>
+			      <div *ngFor="let question of checkList.listaPergunta">
+			      	<p class="card text-center" input>{{question.Pergunta}}</p>
+			      </div>	
 				  <input type="text" id="label" value="" type="hidden"/>
 			    </div>
 			  </div>
