--- a/src/app/playground/playground.component.css
+++ b/src/app/playground/playground.component.css
@@ -11,3 +11,9 @@ tr.table-top {
 	float: right; 
 	margin-top: 13px;
 }
+
+.detail{
+	text-decoration: underline;
+	color: blue;
+	cursor: pointer;
+}	
