--- a/src/app/playground/playground.component.html
+++ b/src/app/playground/playground.component.html
@@ -24,8 +24,8 @@
 				</tr>
 			</thead>
 			<tbody>
-				<tr id="playground{{playground.id}}" *ngFor="let playground of playgrounds">
-					<td>{{playground.id}}</td>
+				<tr *ngFor="let playground of playgrounds; let i = index" [attr.data-index]="i">
+					<td>{{i+1}}</td>
 					<td class="detail" [routerLink]="['edit-playground', playground.id]">{{playground.name}}</td>
 					<td>{{playground.description}}</td>
 					<td>{{playground.address}}</td>
@@ -44,7 +44,7 @@
 			</tbody>
 		</table>
 		</div>
-		<div class="container" id="Mplayground{{playground.id}}" *ngFor="let playground of playgrounds" [hidden]="visible" (window:resize)="onResize($event)">
+		<div class="container" *ngFor="let playground of playgrounds; let i = index" [attr.data-index]="i" [hidden]="visible" (window:resize)="onResize($event)">
 		  <div class="card">
 		    <div class="card-body">
 			  <div class="pull-right">
