--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -17,7 +17,7 @@
 	</div>
 </nav>
 <div class="navbar-header nav-mobile" [hidden]="visible" (window:resize)="onResize($event)">
-	<a routerLink="/playgrounds"><img alt="plays" class="play-nav" src="../assets/images/play.jpg"></a>
+	<a routerLink="/playgrounds"><img alt="plays" class="play-nav" src="./assets/images/play.jpg"></a>
 	<span class="nav-title">PLAYGROUNDS</span>
 	<span class="pointer-2" (click)="openNav()">&#9776;</span>
 </div>
