--- a/src/app/modal/modal.component.html
+++ b/src/app/modal/modal.component.html
@@ -4,17 +4,17 @@
     <div class="modal-content">
       <div class="modal-header">
         <h4 class="modal-title" id="title"></h4>
-        <button type="button" class="close" aria-label="Close" (click)="onCloseHandled()"><span aria-hidden="true">&times;</span></button>
+        <button type="button" id="close1" class="close" aria-label="Close" (click)="onCloseHandled()"><span aria-hidden="true">&times;</span></button>
       </div>
       <div class="modal-body">
         <p id="desc"></p>
       </div>	  
       <div class="modal-footer" id="cancel">
-        <button type="button" class="btn btn-default" (click)="onCloseHandled()" >Close</button>
+        <button type="button" id="close2" class="btn btn-default" (click)="onCloseHandled()" >Close</button>
       </div>
       <div class="modal-footer" id="alert">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="onCloseHandled()">Close</button>
-        <button type="button" class="btn btn-primary" (click)="onCloseAlertHandled()">Save changes</button>
+        <button type="button" id="close3" class="btn btn-secondary" data-dismiss="modal" (click)="onCloseHandled()">Close</button>
+        <button type="button" id="action" class="btn btn-primary" (click)="onCloseAlertHandled()">Confirm</button>
       </div>	  
     </div>
   </div>
