--- a/src/app/playground/playground.component.css
+++ b/src/app/playground/playground.component.css
@@ -17,3 +17,16 @@ tr.table-top {
 	color: blue;
 	cursor: pointer;
 }	
+
+h1 {
+	color: #369;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 250%;
+  }
+  
+  
+  h2, h3 {
+	color: #444;
+	font-family: Arial, Helvetica, sans-serif;
+	font-weight: lighter;
+  }
