--- a/src/app/equipment/add-equipment.component.html
+++ b/src/app/equipment/add-equipment.component.html
@@ -1,12 +1,8 @@
-<div id="editForm" class="container">
+<div id="addForm" class="container">
 	<div class="col-md-12">
 		<form>
 			<h2>Add Equipment Information</h2>
 			<table>
-				<tr>
-					<th>ID:</th>
-					<th><input style="border-radius: 7px;" type="text" name="id" value="" /></th>
-				</tr>
 				<tr>
 					<th>Code:</th>
 
