--- a/src/app/equipment/edit-equipments.component.html
+++ b/src/app/equipment/edit-equipments.component.html
@@ -2,7 +2,7 @@
 <div id="editForm" class="container">
 	<div class="col-md-12">
 		<form>
-			<h2>Edit Equipment Information</h2>
+			<h2>Edit Equipment Data</h2>
 			<table>
 				<tr>
 					<th>ID:</th>
