--- a/src/app/check-list/check-list.component.html
+++ b/src/app/check-list/check-list.component.html
@@ -1,11 +1,11 @@
 <div class="container">
 	<div class="row">
-		<div class="col-md-4" *ngFor="let checkList of checkLists">
+		<div class="col-md-4" *ngFor="let checkList of checkLists;  let i = index" [attr.data-index]="i">
 			<div class="container" id="">
 			  <div class="card">
 			    <div class="card-body">
 				  <div class="pull-right">
-					  <button class="btn btn-info">
+					  <button class="btn btn-info" [routerLink]="['check-list-unit', checkList.id]">
 						<i class="fa fa-edit"></i>
 					  </button>
 					  <button class="btn btn-danger">
@@ -13,13 +13,14 @@
 					  </button>
 				  </div>
 				  <br>	
-			      <h4 class="card-title">Check List {{checkList.id + 1}}</h4>		      
+			      <h4 class="card-title">Check List {{checkList.id}}</h4>
+					<p class="card text-center" input id="nome">{{i+1}}</p>				  
 			      <p class="card text-center" input id="nome">{{checkList.nome}}</p>
-			      <div *ngFor="let question of checkList.questionList; let i = index" [attr.data-index]="i">
-					<td>Question {{i+1}}</td>
-			      	<p class="card text-center">{{question}}</p>
-			      </div>	
-				  <input type="text" id="label" value="" type="hidden"/>
+			      <li class="check-list" *ngFor="let question of checkList.questionList; let i = index" [attr.data-index]="i">
+					<a class="check-list">
+					<span>Question {{i+1}}</span> {{question}}			
+					</a>
+			      </li>					  
 			    </div>				
 			  </div>
 			</div>
