--- a/src/app/check-list/check-list-unit.component.html
+++ b/src/app/check-list/check-list-unit.component.html
@@ -1,7 +1,7 @@
 <div class="container">
 <div class="row">
 		<div class="col-md-12">
-        <h1 class="table-top">Edit {{checkList.name}} CheckList Data</h1>			
+        <h1 class="table-top">Edit {{checkList.name}} CheckList</h1>     	
       </div>
     <tbody>
 
@@ -13,15 +13,26 @@
     <td></td>
     <thead>
       <tr>
-        <th class="text-center">Question</th>
-        <th class="text-center">&nbsp;</th>
-        <li class="check-list" *ngFor="let question of checkList.questionList; let i = index" [attr.data-index]="i">
-            <a class="check-list">
-            <span>Question {{i+1}}</span> {{question}}			
-            </a>
-              </li>	
+        <th class="text-left">Question nr</th>
+        <th class="text-left">Question</th>
+        <th class="text-left"><button class="btn btn-success table-top-button"><i class="fa fa-plus"></i></button>   </th>
       </tr>
-    </thead>
+      </thead>
+      <tbody>
+        <tr class="check-list" *ngFor="let question of checkList.questionList; let i = index" [attr.data-index]="i">
+            <td class="check-list"><span>Question {{i+1}}</span></td>
+            <td>{{question}}</td>
+            <td>
+              <button class="btn btn-info">
+                <i class="fa fa-edit"></i>
+              </button>
+                <button class="btn btn-danger" >
+                  <i class="fa fa-minus"></i>
+                </button>
+              </td>
+          </tr>	
+      </tbody>
+
     
   </table>
   </div>
