--- a/src/app/playground/playground.component.html
+++ b/src/app/playground/playground.component.html
@@ -26,7 +26,7 @@
 			<tbody>
 				<tr *ngFor="let playground of playgrounds; let i = index" [attr.data-index]="i">
 					<td>{{i+1}}</td>
-					<td class="detail" [routerLink]="['edit-playground', playground.id]">{{playground.name}}</td>
+					<td class="detail" [routerLink]="['playground-detail', playground.id]">{{playground.name}}</td>
 					<td>{{playground.description}}</td>
 					<td>{{playground.address}}</td>
 					<td>{{playground.locality}}</td>
