--- a/src/app/check-list/check-list-unit.component.html
+++ b/src/app/check-list/check-list-unit.component.html
@@ -1,40 +1,47 @@
 <div class="container">
-<div class="row">
-		<div class="col-md-12">
-        <h1 class="table-top">Edit {{checkList.name}} CheckList</h1>     	
-      </div>
-    <tbody>
+  <div class="row">
+    <div class="col-md-12">
+      <h1 class="table-top">Edit CheckList: {{checkList.name}}</h1>
+        <br />
+        <br />
+        <br />
+        <tr allign="center">
+          <th>Nome:</th>
+          <th><input style="border-radius: 7px;" type="text" name="name" value={{checkList.name}} /></th>
+          <button style="margin-right: 10px;" type="button" class="btn btn-primary" (click)="editCheckList(checkList.id)">Submit</button> 
+        </tr>
+        <br />
+        <br />
+    </div>
 
-      </tbody>
+    <div class="col-md-12 table-responsive" (window:resize)="onResize($event)">
+      <table class="table table-bordered table-striped table-hover">
 
-  <div class="col-md-12 table-responsive" (window:resize)="onResize($event)">	
-  <table class="table table-bordered table-striped table-hover">
-
-    <td></td>
-    <thead>
-      <tr>
-        <th class="text-left">Question nr</th>
-        <th class="text-left">Question</th>
-        <th class="text-left"><button class="btn btn-success table-top-button"><i class="fa fa-plus"></i></button>   </th>
-      </tr>
-      </thead>
-      <tbody>
-        <tr class="check-list" *ngFor="let question of checkList.questionList; let i = index" [attr.data-index]="i">
+        <td></td>
+        <thead>
+          <tr>
+            <th class="text-left">Question nr</th>
+            <th class="text-left">Question</th>
+            <th class="text-left"><button class="btn btn-success table-top-button"><i class="fa fa-plus"></i></button>
+            </th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr class="check-list" *ngFor="let question of checkList.questionList; let i = index" [attr.data-index]="i">
             <td class="check-list"><span>Question {{i+1}}</span></td>
             <td>{{question}}</td>
             <td>
               <button class="btn btn-info">
                 <i class="fa fa-edit"></i>
               </button>
-                <button class="btn btn-danger" >
-                  <i class="fa fa-minus"></i>
-                </button>
-              </td>
-          </tr>	
-      </tbody>
+              <button class="btn btn-danger">
+                <i class="fa fa-minus"></i>
+              </button>
+            </td>
+          </tr>
+        </tbody>
 
-    
-  </table>
+      </table>
+    </div>
   </div>
-</div>
 </div>
