--- a/src/app/check-list/check-list-unit.component.css
+++ b/src/app/check-list/check-list-unit.component.css
@@ -3,7 +3,13 @@ h1 {
 	color: #369;
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 250%;
-  }
+	}
+	
+	tr {
+		color: #69;
+		font-family: Arial, Helvetica, sans-serif;
+		font-size: 150%;
+		}
   
   
   h2, h3 {
